Fixed  css layout issue with codemirror tinymce plugin.

--- a/app/assets/javascripts/tinymce/plugins/codemirror/plugin.css
+++ b/app/assets/javascripts/tinymce/plugins/codemirror/plugin.css
@@ -14,7 +14,7 @@ white-space: pre;
 
 .CodeMirror {
   font-family: monospace;
-  height: 375px;
+  height: 100%;
   color: black;
-  width: 835px;
+  width: 100%;
 }
